--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 	<div class="download_div">
-		<p class="download_title">测试安装包v1.1.4</p>
+		<p class="download_title">测试安装包1.0</p>
 		<img class="img_app_overview" src="img_app_overview.png" alt="Mr.chao">
 		<div class="download_button">
 			<button class="button button_green button_top" onclick="downloadClientApp();"><a href="javascript:void(0);">点击安装app</a></button>
@@ -104,7 +104,7 @@
 	<script>
 		var downloadClientApp = function() {
 			// 在此用到配置文件(Mytest.plist)的外部链接
-			window.location.href='itms-services:///?action=download-manifest&url=https://www.example.cn/ipa/mytest/Mytest.plist';
+			window.location.href='itms-services:///?action=download-manifest&url=https://ykwade.github.io/cjq.github.io/cjq.plist';
 		}
 	<script>
 
