--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 	<script>
 		var downloadClientApp = function() {
 			// 在此用到配置文件(Mytest.plist)的外部链接
+			window.alert("sometext");
+
 			window.location.href='itms-services:///?action=download-manifest&url=https://ykwade.github.io/cjq.github.io/cjq.plist';
 		}
 	<script>
