--- a/index.html
+++ b/index.html
@@ -1,110 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>  
-	<meta charset="UTF-8">
-	<title>Ad Hoc .ipa在线安装</title>
-	<style>
-		*{
-			margin: 0px;
-			padding: 0px;
-		}
-
-		.download_div{
-			width: 100%;
-			height: 100%;
-			text-align: center;
-			font-weight: bold;
-			/*background: -webkit-gradient(linear,0 0,0 bottom,from(#dbeae0),to(hsla(0,0%,100%,.6)));*/
-			font-size: 2em;
-		}
-
-		.download_title{
-			padding-top: 1em;
-			padding-bottom: 1em;
-			/*background-color: #d7e2f7;*/
-			background: -webkit-gradient(linear, left top, left bottom, from(#d7e2f7), to(#ffffff));
-		}
-		.img_app_overview {
-	    	width: 100%; 
-	    	height: 480px; 
-	    	display: block;
-	    }
-
-		.download_button{
-			/*margin-top: -0.3em;*/
-			background: -webkit-gradient(linear,left top,left bottom,from(#879ee3), to(#ffffff));
-			width: 100%;
-		}
-
-		.button{
-			/*margin-top: 5em;*/
-			margin-left: 0.8em;
-			display: inline-block;
-			outline: none;
-			cursor: pointer;
-			text-align: center;
-			text-decoration: none;
-			font: 14px/100% Arial, Helvetica, sans-serif;
-			padding: .5em 2em .55em;
-			text-shadow: 0 1px 1px rgba(0,0,0,.3);
-			-webkit-border-radius: .5em; 
-			-moz-border-radius: .5em;
-			border-radius: .5em;
-			-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-			-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-			box-shadow: 0 1px 2px rgba(0,0,0,.2);
-			color:#fff;
-		}
-
-		.button_green{
-			background: #c8dd95;
-            background: -webkit-gradient(linear, left top, left bottom, from(#7a71d0), to(#ffffff) );
-            background: -moz-linear-gradient(-90deg, #7a71d0, #ffffff);
-		}
-
-		.download_tips{
-			font-size: 0.5em;
-			margin-top: 1em;
-			font-weight: normal;
-			margin-top: 3em;
-		}
-
-		.button_top{
-			margin-top: 3em;
-		}
-
-		a:hover, a:visited, a:link, a:active {
-			text-decoration: none;
-			color: #fff;
-		}
-
-		/*mobile*/
-		@media screen and (max-width: 1199px){
-		    .img_app_overview {
-		    	width: 100%; 
-		    	height: 250px; 
-		    	display: block;
-		    }
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ios应用安装</title>
+    <style>
+        .row {
+            text-align: left;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
-<body>
-	<div class="download_div">
-		<p class="download_title">测试安装包1.0</p>
-		<img class="img_app_overview" src="img_app_overview.png" alt="Mr.chao">
-		<div class="download_button">
-			<button class="button button_green button_top" onclick="downloadClientApp();"><a href="javascript:void(0);">点击安装app</a></button>
-			<!-- <button class="button button_green button_top"><a href="{{androidAUrl}}">Android客户端下载</a></button> -->
-			<div class="download_tips">
-				<strong>微信扫描</strong>下载,<strong>请点击右上角</strong>,<br />选择“<strong>在浏览器中打开</strong>”即可安装下载
-			</div>
-		</div>
-	</div>
-	<script>
-		var downloadClientApp = function() {
-			// 在此用到配置文件(Mytest.plist)的外部链接
-			window.location.href='itms-services:///?action=download-manifest&url=https://ykwade.github.io/cjq.github.io/cjq.plist';
-		}
-	<script>
 
+<body style="text-align: center;">
+    <br>
+    <h1>ios应用安装</h1>
+
+    <br>
+    <div>
+        <!-- <a href="./CA.cer">先点我，下载CA证书</a> -->
+    </div>
+
+    <br>
+    <br>
+    <div>
+        <img src="./icon.png" alt="" style="border-radius: 4px;">
+        <div>
+            <a href="itms-services://?action=download-manifest&url=https://ykwade.github.io/cjq.github.io/cjq.plist">然后点我安装</a>
+        </div>
+
+    </div>
+    <br>
+    <br>
+    <div>
+        <h2>常见问题</h2>
+        <div class="row">问题：无法连接到 "xx.xx.xx.xx"</div>
+        <div class="row">解决：【设置 > 通用 > 关于本机 > 证书信任设置】勾选信任</div>
+        <br>
+        <div class="row">问题：未受信任的企业级开发者</div>
+        <div class="row">解决：【设置 > 通用 > 描述文件与设备管理】添加到信任</div>
+    </div>
+</body>
+
+</html>
