--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div>
         <img src="./icon.png" alt="" style="border-radius: 4px;">
         <div>
-            <a href="itms-services://?action=download-manifest&url=https://192.168.1.104/manifest.plist">然后点我安装</a>
+            <a href="itms-services://?action=download-manifest&url=https://ykwade.github.io/cjq.github.io//manifest.plist">然后点我安装</a>
         </div>
 
     </div>
