--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h1>ios应用安装</h1>
 
     <br>
-    <div>
+   <!--  <div>
         <a href="./CA.cer">先点我，下载CA证书</a>
-    </div>
-
+    </div> -->
+    
     <br>
     <br>
     <div>
