--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ios应用安装</title>
+    <title>OCT999iOS应用安装</title>
     <style>
         .row {
             text-align: left;
@@ -17,7 +17,7 @@
 
 <body style="text-align: center;">
     <br>
-    <h1>ios应用安装</h1>
+    <h1>OCT999iOS应用安装</h1>
 
     <br>
    <!--  <div>
@@ -35,12 +35,7 @@
     </div>
     <br>
     <br>
-    <div>
-        <h2>常见问题</h2>
-        <div class="row">问题：无法连接到 "xx.xx.xx.xx"</div>
-        <div class="row">解决：【设置 > 通用 > 关于本机 > 证书信任设置】勾选信任</div>
-        <br>
-    </div>
+   
 </body>
 
 </html>
